[package]
name = "netscanrs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "0.13.3", features = ["rustls"] }
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio", "macros"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
